# guest_hub

./: .gitignore  README.md  guest_hub_project_skeleton.md  pyproject.toml  requirements.txt  run_pipeline.py  run_spa_legacy.py
config/: column_maps.yaml  logging.yaml  matching_rules.yaml  qa_rules.yaml  settings.yaml  source_rules.yaml
data/interim/: dining_canonical_interim.csv
data/reference/: room_types.tsv
docs/: business_rules.md  canonical_schema.md  changelog.md  matching_logic.md  project_overview.md  qa_checklist.md  runbook.md  source_dictionary.md
src/cleaners/: codes.py  dates.py  names.py  nulls.py  phones.py  text.py
src/legacy/: spa_calendar_converter.py
src/loaders/: dining_loader.py  reference_loader.py  room_loader.py  spa_loader.py
src/matching/: exact_match.py  fuzzy_match.py  guest_resolver.py  keys.py  phone_support.py  repeated_pattern.py  scorer.py  stay_window.py
src/models/: canonical_schema.py  enums.py  hub_schema.py  qa_schema.py
src/outputs/: export_csv.py  export_excel.py  export_json.py  package_run.py
src/parsers/: dining_parser.py  room_parser.py  room_types_parser.py  spa_parser.py  specials_parser.py
src/pipeline/: manifest_builder.py  orchestrator.py  run_context.py  stages.py
src/qa/: audit_flags.py  (+6 more)
tests/: test_dining_parser.py  test_exact_match.py  test_fuzzy_match.py  test_name_cleaning.py  test_phone_cleaning.py  test_pipeline_e2e.py  test_possible_matches.py  test_room_enrichment.py  test_room_expansion.py  test_room_parser.py  test_spa_parser.py  test_stay_window.py  test_validation_and_manifest.py
(+34 files in other folders)
