[project]
name = "guest-hub"
version = "0.1.0"
description = "Guest intelligence hub scaffold for rooms/spa/dining canonicalization and matching"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Guest Hub Team" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
